force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/ApproachTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ApproachTimestamp__c</fullName>
    <description>Data e hora em que a oferta foi abordada ou dispensada pelo operador, compondo a trilha de auditoria da interacao (premissa 13).</description>
    <inlineHelpText>Momento da abordagem ou dispensa da oferta.</inlineHelpText>
    <label>Data da Abordagem</label>
    <type>DateTime</type>
</CustomField>