force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/DismissalReason__c.field-meta.xml
<CustomField>
    <fullName>DismissalReason__c</fullName>
    <description>Motivo da dispensa da oferta, quando informado. Placeholder neutro: premissa 05 (motivo obrigatorio e janela de supressao) ainda sem decisao do negocio.</description>
    <inlineHelpText>Motivo da dispensa, se informado pelo operador.</inlineHelpText>
    <label>Motivo da Dispensa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>