force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/ExternalOfferId__c.field-meta.xml
<CustomField>
    <fullName>ExternalOfferId__c</fullName>
    <description>Identificador da oferta no motor NBO. Chave de upsert idempotente e de deduplicacao de ofertas do mesmo produto (Cenarios 11 a 15).</description>
    <externalId>true</externalId>
    <inlineHelpText>Id da oferta no motor NBO. Usado como chave de upsert idempotente.</inlineHelpText>
    <label>Id Externo da Oferta</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>