force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/IsPrimaryNbo__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryNbo__c</fullName>
    <description>Indica a oferta em destaque quando ha multiplas elegiveis. Placeholder neutro: a regra de priorizacao (premissa 04) ainda sem decisao; por padrao segue a ordem do motor.</description>
    <inlineHelpText>Marcado na oferta exibida em destaque.</inlineHelpText>
    <label>Oferta NBO Principal</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>