force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/LastNboInteractionBy__c.field-meta.xml
<CustomField>
    <fullName>LastNboInteractionBy__c</fullName>
    <description>Operador que abordou ou dispensou a oferta por ultimo. Completa a trilha de auditoria com ApproachTimestamp__c (premissa 13).</description>
    <inlineHelpText>Usuario da ultima interacao com a oferta.</inlineHelpText>
    <label>Ultima Interacao Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ofertas NBO Interagidas</relationshipLabel>
    <relationshipName>NboInteractions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>