force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/NboBenefit__c.field-meta.xml
<CustomField>
    <fullName>NboBenefit__c</fullName>
    <description>Narrativa de elegibilidade e beneficios da oferta NBO (bandeiras, limite pre-aprovado, anuidade, beneficios), exibida no banner de pre-atendimento (Cenario 11).</description>
    <inlineHelpText>Texto de elegibilidade e beneficios exibido ao operador.</inlineHelpText>
    <label>Beneficio NBO</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>