force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/NboProductType__c.field-meta.xml
<CustomField>
    <fullName>NboProductType__c</fullName>
    <description>Tipo de produto da oferta NBO, no mesmo vocabulario do catalogo ProductCatalog__mdt (ex.: CARTAO). Liga a oferta ao produto ofertado no banner (P6).</description>
    <inlineHelpText>Produto da oferta, conforme o catalogo.</inlineHelpText>
    <label>Produto da Oferta NBO</label>
    <length>40</length>
    <type>Text</type>
</CustomField>