force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/NboStatus__c.field-meta.xml
<CustomField>
    <fullName>NboStatus__c</fullName>
    <description>Estado da oferta no ciclo de vida desta jornada: identificada, em abordagem, dispensada ou expirada (RN-14, Cenarios 14 e 15).</description>
    <inlineHelpText>Estado atual da oferta no ciclo de vida.</inlineHelpText>
    <label>Status NBO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elegivel</fullName>
                <default>true</default>
                <label>Elegivel</label>
            </value>
            <value>
                <fullName>Abordada</fullName>
            </value>
            <value>
                <fullName>Dispensada</fullName>
            </value>
            <value>
                <fullName>Expirada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>