force-app/domains/busca-cliente/main/default/objects/Opportunity/fields/NboSuppressedUntil__c.field-meta.xml
<CustomField>
    <fullName>NboSuppressedUntil__c</fullName>
    <description>Data e hora ate quando a oferta dispensada permanece suprimida, sem reexibicao insistente (EL-14). Placeholder neutro: janela de supressao (premissa 05) ainda sem decisao; sessoes usam supressao em memoria.</description>
    <inlineHelpText>Limite da supressao da oferta dispensada.</inlineHelpText>
    <label>Suprimida Ate</label>
    <type>DateTime</type>
</CustomField>